# a_back_deploy

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  jwt_auth.rs  main.rs  models.rs  schema.rs  utils.rs
src/controllers/: auth.rs  config.rs  mod.rs  users.rs
src/controllers/auth/: config.rs  login.rs  logout.rs  mod.rs  refresh.rs  register.rs  role.rs
src/controllers/avito_accounts/: config.rs  create_avito_account.rs  delete_avito_account.rs  get_all_avito_accounts.rs  get_avito_account_by_id.rs  mod.rs  update_avito_account.rs
src/controllers/avito_ads/: config.rs  create_avito_ad.rs  delete_avito_ad.rs  get_all_avito_ads.rs  get_avito_ad_by_id.rs  mod.rs  update_avito_ad.rs
src/controllers/avito_ai_processing/: ai_description_processing.rs  ai_title_processing.rs  config.rs  mod.rs
src/controllers/avito_client/: config.rs  get_avito_balance.rs  get_avito_item_analytics.rs  get_avito_items.rs  get_avito_token.rs  get_avito_user_profile.rs  get_categories_tree.rs  get_category_fields.rs  mod.rs  update_avito_price.rs
src/controllers/avito_editor/: config.rs  create_avito_ad.rs  create_avito_ad_field.rs  create_avito_ad_field_value.rs  delete_avito_ad.rs  delete_avito_ad_field.rs  delete_avito_ad_field_value.rs  get_all_avito_ads.rs  get_avito_ad_by_id.rs  get_avito_ad_field_by_id.rs  get_avito_ad_field_value_by_id.rs  mod.rs  models.rs  update_avito_ad.rs  (+2 more)
src/handlers/: user_handlers.rs
src/models/: avito_accounts.rs  avito_ad_field_values.rs  avito_ad_fields.rs  avito_ads.rs  avito_analytics_ads.rs  avito_client_types.rs  avito_feed_responses.rs  avito_feeds.rs  avito_request_progress.rs  avito_requests.rs  mod.rs  pagination.rs  users.rs
src/routes/: user_routes.rs
src/utils/: encryption.rs  transliterate.rs
(+35 files in other folders)
