[package]
name = "a_back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
actix-web-grants = "4.1.2"
actix-cors = "0.7.1"
actix-web-actors = "4.3.0"
actix = "0.13.5"
diesel = { version = "2.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"
bcrypt = "0.15"
argon2 = { version = "0.6.0-rc.4", features = ["getrandom"] }
dotenv = "0.15"
futures = "0.3.31"
log = "0.4"
cipher = { version = "0.4", features = ["std"] }
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
hex = "0.4"
rand_core = { version = "0.6", features = ["std"] }
lapin = "2.3"
tokio-amqp = "2.0"
tokio = { version = "1.0", features = ["full"] }
dashmap = "5.5"
tokio-stream = "0.1"
actix-ws = "0.3"
url = "2.5"
csv = "1.3"
unicode-segmentation = "1.10"
reqwest = { version = "0.12.26", features = ["json", "multipart"] }
quick-xml = "0.37.0"
